 -- sinfo - Add -F/--future option to sinfo to display future nodes.
 -- sacct - Rename 'Reserved' field to 'Planned' to match sreport and the
    nomenclature of the 'Planned' node.
 -- scontrol - advanced reservation flag MAINT will no longer replace nodes,
    similar to STATIC_ALLOC
 -- sbatch - add parsing for #PBS -d and #PBS -w.
 -- scontrol show assoc_mgr will show username(uid) instead of uid in
    QoS section.
 -- Add strigger --draining and -R/--resume options.
 -- Change --oversubscribe and --exclusive to be mutually exclusive for job
    submission. Job submission commands will now fatal if both are set.
    Previously, these options would override each other, with the last one in
    the job submission command taking effect.
 -- scontrol - Requested TRES and allocated TRES will now always be printed when
    showing jobs, instead of one TRES output that was either the requested or
    allocated.
 -- srun --ntasks-per-core now applies to job and step allocations. Now, use of
    --ntasks-per-core=1 implies --cpu-bind=cores and --ntasks-per-core>1 implies
    --cpu-bind=threads.
 -- salloc/sbatch/srun - Check and abort if ntasks-per-core > threads-per-core.

API CHANGES
===========
 -- job_container plugins - container_p_stepd_create() function signature
    replaced uint32_t uid with stepd_step_rec_t* step.
 -- gres plugins - gres_g_get_devices() function signature replaced pid_t pid
    with stepd_step_rec_t* step.
 -- cgroup plugins - task_cgroup_devices_constrain() function signature removed
    pid_t pid.
 -- task plugins - replace task_p_pre_set_affinity(), task_p_set_affinity(), and
    task_p_post_set_affinity() with task_p_pre_launch_priv() like it was back in
    slurm 20.11.
 -- Allow for concurrent processing of job_submit_g_submit() and
    job_submit_g_modify() calls. If your plugin is not capable of concurrent
    operation you must add additional locking within your plugin.
 -- burst buffer plugins - add bb_g_build_het_job_script().