@@ -99,3 +99,4 @@ API CHANGES
     job_submit_g_modify() calls. If your plugin is not capable of concurrent
     operation you must add additional locking within your plugin.
  -- burst buffer plugins - add bb_g_build_het_job_script().
+ -- Removed return value from slurm_list_append().
